# BindTox

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_SUMMARY.txt  FIX_SUMMARY.md  GETTING_STARTED.md  INDEX.md  QUICK_SHARE.md  QUICK_TEST.md  README.md  Run 1HSG BindTox.command  SETUP_GUIDE.md  START_HERE.txt  STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt  run_app.sh  run_bindtox.sh  start_app.sh  streamlit_app.py
data/: toxicity_reference.csv
data/breachwatch/: leaked_credentials.json
models/: toxicity_model.joblib  toxicity_model.metadata.json
src/bindtox/: __init__.py  backend_api.py  binding_analysis.py  chemistry.py  cli.py  docking.py  input_layer.py  orchestrator.py  pipeline.py  preprocessing.py  schemas.py  storage.py  toxicity.py  utils.py
src/breachwatch/: __init__.py  api.py  cli.py  data_loader.py  repository.py  schemas.py  service.py
tests/: test_breachwatch_api.py  test_breachwatch_cli.py  test_cli_parser.py  test_docking.py  test_storage.py
tools/: expose_with_ngrok.sh  start_public_one_liner.sh
